Subir mantenimiento de Post y preparar ambiente para despliegue.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aprendiendo nodejs y express",
   "main": "index.js",
   "scripts": {
-    "start": "node --env-file=.env index.js",
+    "start": "node index.js",
     "dev": "node --watch --trace-warnings --env-file=.env index.js"
   },
   "author": "Ricky Montero T",
