Subir archivo .env.example.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 PORT=8000
-MONGO_URI=tu_uri_de_mongodb_aqui
+MONGO_URI=tuconexion
+TOKEN_SECRET=tusecret
+NODE_SENDING_EMAIL=tuemail@gmail.com
+NODE_SENDING_PASSWORD=tupassword
+HMAC_VERIFICATION_CODE=tuverificationcode
